parser/metamodel/src/test/data/errors/Enum.mm.merr
File: parser/metamodel/src/test/data/badModels/tekgenesis/sales/Enum.mm
